WSAT-M2: HTML Validated

--- a/index.html
+++ b/index.html
@@ -76,21 +76,33 @@
 
             <h2>Education</h2>
             <CENTER>
-            <table border="1" width="90%" align="center" cellpadding="10">
+            <table border="1" width="90%" align="center" cellpadding="5" cellspacing="0">
+            
+                </tr>
                 <tr>
                     <th>PROGRAM</th>
                     <th>INSTITUTION</th>
-                    <th>SCHOOL YEAR</th>
+                    <th>YEAR GRADUATED</th>
+                </tr>
+                <tr>
+                    <td>Elementary School</td>
+                    <td>PNROA Elementary School</td>
+                    <td>2016</td>
+                </tr>
+                <tr>
+                    <td>High School</td>
+                    <td>PNROA High School</td>
+                    <td>2022</td>
                 </tr>
                 <tr>
                     <td>Senior High School</td>
                     <td>Liceo De Cagayan University</td>
-                    <td>2022 - 2024</td>
+                    <td>2024</td>
                 </tr>
                 <tr>
                     <td>College</td>
                     <td>USTP – CDO Campus</td>
-                    <td>2024 - Present</td>
+                    <td>Present</td>
                 </tr>
             </table>
             </CENTER>
