WSAT-M3: CSS styling added

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
             <h2>Contact Me</h2>
 
             <form>
-                <input type="text" placeholder="Name"><br><br>
-                <input type="email" placeholder="Email"><br><br>
-                <textarea placeholder="Message"></textarea><br><br>
+                <input type="text" placeholder="Name"><br>
+                <input type="email" placeholder="Email"><br>
+                <textarea placeholder="Message"></textarea><br>
                 <button type="submit">Send</button>
             </form>
         </section>   
