WSAT-M4: JavaScript interactivity added

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <button id="themeToggle"></button>
+    <button id="themeToggle">Dark mode</button>
     <link rel="stylesheet" href="CSS/styles.css">
     <meta charset="UTF-8">
     <title>Personal Online CV</title>
@@ -18,7 +18,7 @@
 
 <section class="card">
             <h2>About Me</h2>
-            <img src="images/profile.jpg" alt="Profile photo" width="150">
+            <img src="images/profile.jpg" alt="Profile photo" width="150" align="center">
             
             <p>I am Khristal Jaway, a dedicated IT student specializing in Web Systems and Technologies. 
              I have a strong interest in digital design and front-end development, and I like turning ideas into clean and functional designs. 
