WSAT-M4: JavaScript interactivity added

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 <section class="card">
             <h2>About Me</h2>
-            <img src="images/profile.jpg" alt="Profile photo" width="150" align="center">
+            <img src="images/profile.jpg" alt="Profile photo" width="150" align="center"><br>
             
-            <p>I am Khristal Jaway, a dedicated IT student specializing in Web Systems and Technologies. 
+            <p style="text-align: justify;"> I am Khristal Jaway, a dedicated IT student specializing in Web Systems and Technologies. 
              I have a strong interest in digital design and front-end development, and I like turning ideas into clean and functional designs. 
              I am still learning backend development and improving my technical skills step by step.
             </p>
@@ -82,7 +82,7 @@
                 <tr>
                     <td>Elementary School</td>
                     <td>PNROA Elementary School</td>
-                    <td>2016</td>
+                    <td>2018</td>
                 </tr>
                 <tr>
                     <td>High School</td>
