--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>Personal Online CV</title>
 </head>
-<body>
+<body class="dark-mode">
 
 <main>
     <div class="container">
